@@ -1,3 +1,7 @@
+2011-02-09:
+	* (seebs) the long-awaited cleanup of the database initialization
+	  code.  it's not really beautiful but it's quite a bit better.
+
 2011-02-08:
 	* (seebs) Get full paths for exec*()
 
